--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node": ">=10"
   },
   "scripts": {
+    "install": "npm run build",
     "build": "microbundle-crl --no-compress --format modern,cjs",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
     "prepublish": "run-s build",
